# googlesql-lsp

./: .gitignore  Cargo.toml  DIAGRAMS.md  EXPLAINED.md  README.md
.claude/skills/draw/: SKILL.md
.claude/skills/draw/scripts/: verify-diagram.sh  verify_layout.js
.claude/skills/explain/: SKILL.md
.claude/skills/issues/: SKILL.md
.claude/skills/update/: SKILL.md
.claude/skills/updates/: SKILL.md
.zed/: settings.json
diagrams/: internal-components-sequence.html
dig/: DIAGRAMS.md
dig/diagrams/: editor-lsp-sequence.html  internal-components-sequence.html  zed-extension-registration-sequence.html
explained/: DIAGRAMS.md  EXPLAINED.md  ISSUES.md  editor-lsp-sequence.html  internal-components-sequence.html
explained/diagrams/: editor-lsp-sequence.html  internal-components-sequence.html  publishing-flow.html  zed-extension-registration-sequence.html
explained/prose/: publishing-to-zed-extension-registry.md  windows-support-feasibility.md
scripts/: install-parser.sh  smoke-test.sh
src/: backend.rs  diagnostics.rs  main.rs  parser.rs
zed-extension/: Cargo.toml  extension.toml
zed-extension/languages/googlesql/: config.toml
zed-extension/src/: lib.rs
